--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,6 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-Gemfile.lock
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-
-# Jekyll
+node_modules
+dist
+.tmp
+.sass-cache
+app/components
 _build
