--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,8 @@
         "bootstrap": "~2.3.0",
         "es5-shim": "~2.0.8",
         "font-awesome": "~3.0.2",
-        "jquery": "~1.9.1",
-        "modernizr": "~2.6.2",
-        "scientist.js": "~0.2.0"
+        "jquery": "~1.8.0",
+        "modernizr": "~2.6.2"
     },
     "devDependencies": {}
 }
